stylesheet.less
/* ===============================
   TEMPLATE CSS
   =============================== */

body {
  background-color: @color-swatch2;
  margin: 0;
  padding: 0;
}

.wrapper {
  width: 90%;
  margin: 0 5%;
}

a {
  font-family:@font-swatch2-font-family;
  font-size:@font-swatch5-font-size;
  font-weight:@font-swatch5-font-weight;
  color:@color-swatch3;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

h1, h2, h3, h4, h5, p {
  margin: 0;
}

h1 {
  font-family:@font-swatch1-font-family;
  font-weight: @font-swatch1-font-weight;
  color:@font-swatch1-color;
  line-height:@font-swatch1-line-height;
  letter-spacing: @font-swatch1-letter-spacing;
  font-size: @font-swatch1-font-size;
}

h2
{
  font-family:@font-swatch2-font-family;
  font-size: @font-swatch2-font-size;
  font-weight: @font-swatch2-font-weight;
  line-height:@font-swatch2-line-height;
  color: @font-swatch2-color;
  letter-spacing: @font-swatch2-letter-spacing;
}

h3
{
  font-family:@font-swatch3-font-family;
  font-size:@font-swatch3-font-size;
  font-weight: @font-swatch3-font-weight;
  color: @font-swatch3-color;
  line-height:@font-swatch3-line-height;
  letter-spacing: @font-swatch3-letter-spacing;
}

h4
{
  font-family:@font-swatch4-font-family;
  font-size:@font-swatch4-font-size;
  font-weight:@font-swatch4-font-weight;
  line-height:@font-swatch4-line-height;
  color:@font-swatch4-color;
  letter-spacing: @font-swatch4-letter-spacing;
}

p
{
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight: @font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  letter-spacing: @font-swatch5-letter-spacing;
}

ul, ol, li {
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight: @font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  letter-spacing: @font-swatch5-letter-spacing;
}

blockquote {
  background: transparent;
  padding: 20px 0px;
  margin:0;
  quotes:"\201C""\201D""\2018""\2019";
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight:@font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
}

blockquote:before {
  font-family: georgia;
  color: @font-swatch4-color;
  content:open-quote;
  font-size:3em;
  line-height:.1em;
  margin-right:.1em;
  vertical-align:-.4em;
}

blockquote:after {
  font-family: georgia;
  color: @font-swatch4-color;
  content:close-quote;
  font-size:3em;
  line-height:.1em;
  margin-right:.1em;
  vertical-align:-.4em;
}


/* ===============================
   CUSTOM CSS
   =============================== */

  .logobox{
    background-color: @color-swatch4;
    height:100px;
    width:200px;
    padding:0px 0px 0px 20px;
    -webkit-border-bottom-right-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    -moz-border-radius-bottomright: 5px;
    -moz-border-radius-bottomleft: 5px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    -moz-box-shadow: 5px 5px rgba(0,0,0,0.1);
    -webkit-box-shadow: 5px 5px rgba(0,0,0,0.1);
    box-shadow: 5px 5px rgba(0,0,0,0.1);
    margin:0px auto;
  }

  .logowrapper {
    margin:0px auto;
  }

.navbar {
  background-color:@color-swatch4;
  height:100%;
}


.bluebar {
  background-color:@color-swatch4;
}

.bluebar h4 {
  color:@font-swatch8-color;
  text-align:center;
  padding:22px 0px;
}

.canvas  {
  background-color: @color-swatch1;
}

.main {
  padding: 60px 0px;
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
  overflow: visible;
}

header .widget.profile{
  margin-top:25px;
}

/* DEAFULT PAGE TYPES */

.bk-pt-default .widget.extendednavigation ul li, .widget.extendednavigation li:hover ul li {
  background-color:transparent!important;
}

.bk-pt-default .extendednavigation ul li:hover > ul {

}

.bk-pt-default header {
  position: relative;
  background-color: @color-swatch4;
  bottom:0;
}

.bk-pt-default .widget.extendednavigation li:hover > ul {
  bottom: inherit;
  background-color:lighten(@color-swatch4,5%);
}

.bk-pt-default .widget.extendednavigation ul li:first-child {
  margin-top:0px;
}

.bk-pt-default .widget .extendednavigation a.pull {
  width:100%;
  top:88px;
}

@media only screen and (max-width: 480px) {
.bk-pt-default .widget .extendednavigation a.pull {
  width:100%;
  top:88px;
  }
}

@media only screen and (max-width: 480px) {
.bk-pt-default .widget.extendednavigation {
  padding:0px 0px;
  }
}

.footerbar {
  float:none;
  margin:0px auto;
  display:table;
}

.bk-pt-default .widget.extendednavigation ul li a, .bk-pt-default .widget.extendednavigation ul li.folder .text, 
{
  padding:30px 30px;
  font-size:24px;
}

/* ===============================
   HEADER
   =============================== */

header {
  padding: 0;
  width: 100%;
  position: absolute;
  top:0;
}

.companyheader {
  display: block;
  float: left;
  padding: 20px 0px 18px;
}

/* COMPANY NAME */

.widget.companyname {
  display: block;
  float: left;
  margin: 24px 0px;
}

.widget.companyname a {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
}

.widget.companyname a:hover {
  text-decoration: none;
  cursor: pointer;
}

/* LOGO */

.widget.logo {
  display: block;
  float: left;
  margin-right: 10px;
  margin-top:25px;
}


/* ===============================
   FOOTER
   =============================== */

footer {
  padding: 20px 0px;
  text-align: center;
  background-repeat: repeat;
  color: @color-swatch1;
  background-color: @color-swatch4;
}

footer h1, footer h2, footer h3, footer h4, footer p {
  font-family: @font-swatch2-font-family;
  color: @font-swatch8-color;
  font-weight: 300;
  padding-bottom: 6px;
}
/* ... */

